2008-08-09  Sven Herzberg  <sven@imendio.com>

	Get the gdk+cairo test to pass distcheck, too

	* gdk/tests/Makefile.am: set GDK_PIXBUF_MODULE_FILE so the test can
	pick up the one created at build time
	* gdk/tests/check-gdk-cairo.c (main): delete the output files after a
	successful test run

2008-08-08  Sven Neumann  <sven@gimp.org>

	* gtk/gtkscale.c
	* gtk/gtkscrolledwindow.c
	* gtk/gtksocket.c
	* gtk/gtkspinbutton.c
	* gtk/gtkstatusbar.c
	* gtk/gtkstatusicon.c: use canonical signal names.

2008-08-08  Sven Neumann  <sven@gimp.org>

	* gtk/gtktext.c
	* gtk/gtktextbuffer.c
	* gtk/gtktextlayout.c
	* gtk/gtktexttagtable.c
	* gtk/gtktextview.c
	* gtk/gtktipsquery.c
	* gtk/gtktoolbar.c
	* gtk/gtktoolitem.c
	* gtk/gtktreeitem.c
	* gtk/gtktreemodelfilter.c
	* gtk/gtktreemodelsort.c
	* gtk/gtktreeviewcolumn.c: use canonical signal names.

2008-08-08  Sven Neumann  <sven@gimp.org>

	* gtk/gtktree.c
	* gtk/gtktreemodel.c
	* gtk/gtktreesortable.c
	* gtk/gtktreeview.c
	* gtk/gtkuimanager.c
	* gtk/gtkviewport.c: use canonical signal names.

2008-08-08  Sven Neumann  <sven@gimp.org>

	* gtk/gtkwidget.c:
	* gtk/gtkwindow.c: use canonical signal names.

2008-08-08  Sven Neumann  <sven@gimp.org>

	* gtk/gtkadjustment.c
	* gtk/gtkclist.c
	* gtk/gtkcolorsel.c
	* gtk/gtkiconview.c
	* gtk/gtklayout.c
	* gtk/gtkprogress.c
	* gtk/gtkrange.c
	* gtk/gtkspinbutton.c
	* gtk/gtktext.c
	* gtk/gtktextview.c
	* gtk/gtktreeview.c
	* gtk/gtkviewport.c: use the canonical signal name "value-changed"
	instead of "value_changed".

2008-08-08  Tor Lillqvist  <tml@novell.com>

	* gtk/gtk.symbols
	* gtk/makegtkalias.pl
	* gtk/gtkaccelmap.c
	* gtk/gtkfilechooser.c
	* gtk/gtkfilesel.c
	* gtk/gtkiconfactory.c
	* gtk/gtkicontheme.c
	* gtk/gtkimage.c
	* gtk/gtkrc.c
	* gtk/gtkuimanager.c
	* gtk/gtkwindow.c: No need for the DLL ABI backward compatibility
	functions on Win64.

2008-08-07  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Its g_content_type_from_mime_type, not 